#ADD TYPO3 v12dev Support

--- a/Resources/Private/Container/Templates/Backend.html
+++ b/Resources/Private/Container/Templates/Backend.html
@@ -1,4 +1,6 @@
-<html data-namespace-typo3-fluid="true" xmlns:grid="SchmidtWebmedia\GridForContainer\ViewHelpers">
+<html data-namespace-typo3-fluid="true"
+	  xmlns:grid="http://typo3.org/ns/SchmidtWebmedia/GridForContainer/ViewHelpers"
+>
 <a href="{editLink.url -> f:format.raw()}" title="{editLink.title}">
 	{bodytext -> f:format.nl2br() -> f:format.stripTags()}
 </a>
