--- a/Resources/Private/Partials/Default.html
+++ b/Resources/Private/Partials/Default.html
@@ -1,4 +1,6 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:grid="SchmidtWebmedia\GridForContainer\ViewHelpers" data-namespace-typo3-fluid="true">
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+	  xmlns:grid="http://typo3.org/ns/SchmidtWebmedia/GridForContainer/ViewHelpers"
+	  data-namespace-typo3-fluid="true">
 <f:section name="Column">
 	<f:if condition="{children}">
 		<div class="{grid:grid(type: 'col', grid_config: '{data.grid_config}', layout:'{data.CType}', colIndex:'{colIndex}')} grid-col">
@@ -15,7 +17,6 @@
 			<f:render partial="Default" section="Column" arguments="{data: data, colIndex:'1', children: children_202}"/>
 			<f:render partial="Default" section="Column" arguments="{data: data, colIndex:'2', children: children_203}"/>
 			<f:render partial="Default" section="Column" arguments="{data: data, colIndex:'3', children: children_204}"/>
-
 		</div>
 	</div>
 </f:section>
